/*
 * Steward Strategy Provider API
 *
 * This proto defines the service/methods used by Strategy Providers to interact with Cellars through the Sommelier chain.
 */

syntax = "proto3";
package steward.v3;

option go_package = "/steward_proto";

import "aave_v2_stablecoin.proto";
import "cellar_v1.proto";
import "cellar_v2.proto";

/*
 * Service for handling Cellar contract calls
 */
service ContractCall {
    // Handles scheduled contract call submission
    rpc Schedule(ScheduleRequest) returns (ScheduleResponse) {}
}

/*
 * Represents a single, scheduled function call to a particular Cellar
 */
message ScheduleRequest {
    // The ID (currently simply an Ethereum address) of the target Cellar
    string cellar_id = 1;
    // The block height at which to schedule the contract call
    uint64 block_height = 2;
    // The data from which the desired contract function will be encoded
    oneof call_data {
        AaveV2Stablecoin aave_v2_stablecoin = 3;
        CellarV1 cellar_v1 = 4;
        CellarV2 cellar_v2 = 5;
    }
}

message ScheduleResponse {
    // The hex encoded ID of the scheduled cork
    string id = 1;
}
